--- a/bin/index.html
+++ b/bin/index.html
@@ -11,94 +11,17 @@
 
         <!-- and it's easy to individually load additional languages -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/languages/ocaml.min.js"></script>
-        <style>
-          /* .start-animation { */
-  /*               animation: bounce 3s ease-in-out infinite; */
-  /*         } */
-  /*         @keyframes bounce { */
-  /* 0% { left: 0; } */
-  /* 50% { left: calc( 100% - 50px ); } */
-  /* 100% { left: 0; } */
-  /*         } */
-
-          .start-animation {
-    animation: flash 1s linear;
-}
-
-@keyframes opacityMask {
-    0% {
-        -webkit-mask-image: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 50%, rgba(0, 0, 0, 0) 100%);
-        mask-image: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 50%, rgba(0, 0, 0, 0) 100%);
-    }
-    50% {
-        -webkit-mask-image: linear-gradient(to right, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 1) 100%);
-        mask-image: linear-gradient(to right, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 1) 100%);
-    }
-    100% {
-        -webkit-mask-image: linear-gradient(to right, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 1) 100%);
-        mask-image: linear-gradient(to right, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 1) 100%);
-    }
-}
-
-          
-/* Shake Animation */
-@keyframes shake {
-    0% { transform: translateX(0); }
-    20% { transform: translateX(-5px); }
-    40% { transform: translateX(5px); }
-    60% { transform: translateX(-5px); }
-    80% { transform: translateX(5px); }
-    100% { transform: translateX(0); }
-}
-
-/* Flash Animation */
-@keyframes flash {
-    0% { opacity: 0; }
-    100% { opacity: 1; }
-}
-
-/* Classes to trigger animations */
-.shake {
-    animation: shake 0.4s ease-in-out;
-}
-
-.flash {
-    animation: flash 0.2s ease-in-out;
-}
-
-        </style>
     </head>
     <body>
         <script>
          codeInput.registerTemplate("syntax-highlighted", codeInput.templates.hljs(hljs, [] /* Array of plugins (see below) */));
         </script>
 
-        <code-input id="editor" language="ocaml">(** A style property has a name a value *)
-type property = { name : string; mutable v : int }
-let top = { name = "top"; v = 0}
-let left = { name = "left"; v = 0}
+        <code-input language="ocaml">(** Oh *)
+let say_hello = Format.printf "Hello %s %s"</code-input>
 
-(** Setting a property *)
-let set prop new_value =
-  Format.printf "Setting %s from %d to %d\n" prop.name   prop.v new_value;
-  prop.v <- new_value</code-input>
-        <!-- <input type="button" id="execute" value="Click" /> -->
-        <!-- <pre><code id="types"></code></pre>
-             <pre><code id="output"></code></pre> -->
-
-            <code-input id="editor" language="ocaml">(** An undo-able value is a value, and a function to revert the side-effects of
-                its computation *)
-                type 'a undoable = 'a * (unit -> unit)
-
-                (** Helper to create an undo-able value, with a default undo *)
-                let return ?(undo = fun () -> ()) v : 'a undoable = (v, undo)
-
-                (** A function to set a style in an undo-able way *)
-                let set_u prop new_value =
-                let old_value = prop.v in
-                let () = set prop new_value in
-                let undo () = set prop old_value in
-                return ~undo ()</code-input>
+        <code-input language="ocaml">let say_hello_to_my_family = say_hello "Dupont"
+let () = say_hello_to_my_family "Gerard"</code-input>
 
         <script src="blog.js"></script>
     </body>
